WIP: socket implementation
